--- a/ejemplo-flexbox-2.html
+++ b/ejemplo-flexbox-2.html
@@ -90,4 +90,8 @@
 <!--La propiedad que se utiliza para centrar los elementos a lo largo del eje principal horizontal en un contenedor flex es justify-content; -->
 <!--La propiedad que se utiliza para centrar los elementos a lo largo del eje secundario vertical en un contenedor flex es align-items;-->
 <!--El propósito del valor `justify-content: space-between` en la propiedad `justify-content` del encabezado es que los elementos se distribuyan de manera uniforme-->
-<!--El propósito del valor `align-items: baseline` en la propiedad `align-items` del encabezado es- que los elementos se alineen de manera uniforme a lo largo de la linea->
+<!--El propósito del valor `align-items: baseline` en la propiedad `align-items` del encabezado es que los elementos se alineen de manera uniforme a lo largo de la linea-->
+<!--La propiedad CSS que se utiliza para establecer el ancho del contenedor del título es width-->
+<!--La propiedad CSS se que utiliza para alinear el texto del título en el centro es text-align-->
+<!--La propiedad CSS que se utiliza para establecer un margen a la derecha y a la izquierda del contenedor es margin-->
+<!--La propiedad CSS que se utiliza para establecer un margen a la derecha y a la izquierda del contenedor es background-color-->
