--- a/adidas.html
+++ b/adidas.html
@@ -13,47 +13,71 @@
     <div id="titulo">
         <header>
             <div id="subtitulos">
+                <nav>
+                    <ul class="inicio">
+                        <li><a href="#">Todo el Calzado</a></li>
+                        <li><a href="#">Running</a></li>
+                        <li><a href="#">Botines</a></li>
+                        <li><a href="#">Originals</a></li>
+                        <li><a href="#">Superstar</a></li>
+                        <li><a href="#">Forum</a></li>
+                        <li><a href="#">ZX</a></li>
+                        <li><a href="#">NMD</a></li>
+                    </ul>
+                </nav>
+
+
+            </div>
+            <div>
                 <ul id="inicio">
-                    <li><a href="#">Todo el Calzado</a></li>
-                    <li><a href="#">Running</a></li>
-                    <li><a href="#">Botines</a></li>
-                    <li><a href="#">Originals</a></li>
-                    <li><a href="#">Superstar</a></li>
-                    <li><a href="#">Forum</a></li>
-                    <li><a href="#">ZX</a></li>
-                    <li><a href="#">NMD</a></li>
+                    <li><a href="#">Filtrar y ordenar</a></li>
                 </ul>
             </div>
-            <div id="titulo-dere"></div>
-            <ul><li><a href="#">Filtrar y ordenar</a></li>
-            </ul>
-        </div>
-    </header>
+        </header>
     </div>
+
     <main class="container">
         <div class="box">
-            <img src="https://picsum.photos/200" alt="">
-            <h3>Zapatillas Ultra Boost Light</h3>
+            <div class="img-container">
+                <!--img 1-->
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/22960621dd9043d08985af7f010c1c83_9366/zapatillas-ultraboost-light.jpg"
+                alt="">
+                <!--img 2-->
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/037f62640484436fb159af7f010bca2a_9366/zapatillas-ultraboost-light.jpg" alt="" class="img-hover">
+                <div class="precio">
+                <p>$65500</p>
+                </div>
+            
+            </div>
+            <h2>Zapatillas Ultraboost Light</h2>
+            <h3>Running</h3>
+            <p></p>
+
+        </div>
+
+<div class="box">
+         <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/22960621dd9043d08985af7f010c1c83_9366/zapatillas-ultraboost-light.jpg"
+                alt=""></a>
+            <h3>Zapatillas Ultraboost Light</h3>
             <p>Running</p>
-            <a href="#">Enlace 1</a>
         </div>
         <div class="box">
-            <img src="https://picsum.photos/200" alt="">
-            <h3></h3>
-            <p>Zapatillas Ultraboost 1.0</p>
-            <a href="#">Enlace 2</a>
+            <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/dfd8bc7fcd28450a8ab6af1f0165e039_9366/zapatillas-ultraboost-1.0.jpg"
+                alt=""></a>
+            <h3>Zapatillas Ultraboost 1.0</h3>
+            <p>Hombres Sportswear</p>
         </div>
         <div class="box">
-            <img src="https://picsum.photos/200" alt="">
-            <h3></h3>
-            <p></p>
-            <a href="#">Enlace 3</a>
+            <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/ad7b7ec1e3f840279fccaf1b018b5e8a_9366/zapatillas-forum-low.jpg"
+                alt=""></a>
+            <h3>Zapatillas Forum Low</h3>
+            <p>Hombre Originals</p>
         </div>
         <div class="box">
-            <img src="https://picsum.photos/200" alt="">
-            <h3></h3>
-            <p></p>
-            <a href="#">Enlace 4</a>
+            <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/7fc0beb9ca534e65a551ae0c01554149_9366/zapatillas-forum-84-low-8k.jpg"
+                alt=""></a>
+            <h3>Zapatillas Forum 84 Low 8K</h3>
+            <p>Hombre Originals</p>
         </div>
     </main>
     <footer></footer>
