--- a/adidas.html
+++ b/adidas.html
@@ -29,7 +29,7 @@
 
             </div>
             <div>
-                <ul id="inicio">
+                <ul class="inicio">
                     <li><a href="#">Filtrar y ordenar</a></li>
                 </ul>
             </div>
@@ -41,44 +41,65 @@
             <div class="img-container">
                 <!--img 1-->
                 <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/22960621dd9043d08985af7f010c1c83_9366/zapatillas-ultraboost-light.jpg"
-                alt="">
+                    alt="">
                 <!--img 2-->
-                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/037f62640484436fb159af7f010bca2a_9366/zapatillas-ultraboost-light.jpg" alt="" class="img-hover">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/037f62640484436fb159af7f010bca2a_9366/zapatillas-ultraboost-light.jpg"
+                    alt="" class="img-hover">
                 <div class="precio">
-                <p>$65500</p>
+                    <p>$99.999</p>
                 </div>
-            
+
             </div>
             <h2>Zapatillas Ultraboost Light</h2>
             <h3>Running</h3>
-            <p></p>
-
         </div>
 
-<div class="box">
-         <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/22960621dd9043d08985af7f010c1c83_9366/zapatillas-ultraboost-light.jpg"
-                alt=""></a>
-            <h3>Zapatillas Ultraboost Light</h3>
-            <p>Running</p>
-        </div>
         <div class="box">
-            <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/dfd8bc7fcd28450a8ab6af1f0165e039_9366/zapatillas-ultraboost-1.0.jpg"
-                alt=""></a>
-            <h3>Zapatillas Ultraboost 1.0</h3>
-            <p>Hombres Sportswear</p>
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/dfd8bc7fcd28450a8ab6af1f0165e039_9366/zapatillas-ultraboost-1.0.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/9a3c17f0964044059607af420143011f_9366/zapatillas-ultraboost-1.0.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$63.699</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Ultraboost 1.0</h2>
+            <h3>Hombre Sportswear</h3>
         </div>
+
         <div class="box">
-            <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/ad7b7ec1e3f840279fccaf1b018b5e8a_9366/zapatillas-forum-low.jpg"
-                alt=""></a>
-            <h3>Zapatillas Forum Low</h3>
-            <p>Hombre Originals</p>
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/ad7b7ec1e3f840279fccaf1b018b5e8a_9366/zapatillas-forum-low.jpg"
+                    alt="">
+                <img src="
+                    https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/b68b2a37f0ab4245a6fbaf1b0187ff82_9366/zapatillas-forum-low.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$64.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Forum Low</h2>
+            <h3>Hombre Originals</h3>
         </div>
+
         <div class="box">
-            <a href=""><img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/7fc0beb9ca534e65a551ae0c01554149_9366/zapatillas-forum-84-low-8k.jpg"
-                alt=""></a>
-            <h3>Zapatillas Forum 84 Low 8K</h3>
-            <p>Hombre Originals</p>
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/7fc0beb9ca534e65a551ae0c01554149_9366/zapatillas-forum-84-low-8k.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/82882cb60c31432ba529ae0c0154db3a_9366/zapatillas-forum-84-low-8k.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$134.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Forum 84 Low 84</h2>
+            <h3>Hombre Originals</h3>
         </div>
+
     </main>
     <footer></footer>
 </body>
