--- a/adidas.html
+++ b/adidas.html
@@ -10,31 +10,29 @@
 </head>
 
 <body>
-    <div id="titulo">
-        <header>
-            <div id="subtitulos">
-                <nav>
-                    <ul class="inicio">
-                        <li><a href="#">Todo el Calzado</a></li>
-                        <li><a href="#">Running</a></li>
-                        <li><a href="#">Botines</a></li>
-                        <li><a href="#">Originals</a></li>
-                        <li><a href="#">Superstar</a></li>
-                        <li><a href="#">Forum</a></li>
-                        <li><a href="#">ZX</a></li>
-                        <li><a href="#">NMD</a></li>
-                    </ul>
-                </nav>
-
-
-            </div>
-            <div>
+    <header>
+        <div id="subtitulos">
+            <nav>
                 <ul class="inicio">
-                    <li><a href="#">Filtrar y ordenar</a></li>
+                    <li><a href="#">Todo el Calzado</a></li>
+                    <li><a href="#">Running</a></li>
+                    <li><a href="#">Botines</a></li>
+                    <li><a href="#">Originals</a></li>
+                    <li><a href="#">Superstar</a></li>
+                    <li><a href="#">Forum</a></li>
+                    <li><a href="#">ZX</a></li>
+                    <li><a href="#">NMD</a></li>
                 </ul>
-            </div>
-        </header>
-    </div>
+            </nav>
+
+
+        </div>
+        <div>
+            <ul class="inicio">
+                <li><a href="#">Filtrar y ordenar</a></li>
+            </ul>
+        </div>
+    </header>
 
     <main class="container">
         <div class="box">
@@ -97,6 +95,126 @@
 
             </div>
             <h2>Zapatillas Forum 84 Low 84</h2>
+            <h3>Hombre Originals</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/cf419497ada549aebef0af510008ccef_9366/zapatillas-3mc.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/299e18126d5b4fdf81e2af510002229a_9366/zapatillas-3mc.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$26.299</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas 3MC</h2>
+            <h3>Originals</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/977ab86e1a60497a84eaadd10059708e_9366/zapatillas-campus-adv.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_766,h_766,f_auto,q_auto,fl_lossy,c_fill,g_auto/1b0704efed9e4c95bc8fadd10059b949_9366/zapatillas-campus-adv.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$49.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Campus ADV</h2>
+            <h3>Originals</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/323880509bb648acbda7ac5e003bff27_9366/zapatillas-forum-mid.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/19f8e8a2f6c74796b072ac5e003e93eb_9366/zapatillas-forum-mid.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$44.499</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Forum Mid</h2>
+            <h3>Originals</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/5d4867cb40e4400f8101ae9201288033_9366/zapatillas-adi2000.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/e2cf24d7a0c64a33b7ebae9000f43591_9366/zapatillas-adi2000.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$71.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas adi2000</h2>
+            <h3>Hombre Originals</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/7efe1a83e4c6412f8062ae9200ae6278_9366/zapatillas-campus-00s.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/beb06d503a40499abff3ae9200ada55a_9366/zapatillas-campus-00s.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$64.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Campus 00s</h2>
+            <h3>Hombre Originals</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/6a59c3d76baa4b53b7b5ae890025258b_9366/zapatillas-zntasy-lightmotion.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/4404128784794451a1b6ae890024b1f4_9366/zapatillas-zntasy-lightmotion.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$61.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Zntasy Lightmotion+</h2>
+            <h3>Hombre Sportswear</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/b6d7dba2343544199762ae7400937030_9366/zapatillas-superstar-parley.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/f805618e899040b498baae92012b9956_9366/zapatillas-superstar-parley.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$85.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Superstar Parley</h2>
+            <h3>Originals</h3>
+        </div>
+
+        <div class="box">
+            <div class="img-container">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/1c33f2a281d0489d84e2ae4b0103a0b6_9366/zapatillas-rivalry-low.jpg"
+                    alt="">
+                <img src="https://assets.adidas.com/images/w_383,h_383,f_auto,q_auto,fl_lossy,c_fill,g_auto/e299fca283c4419b9334ae4b0103f3cf_9366/zapatillas-rivalry-low.jpg"
+                    alt="" class="img-hover">
+                <div class="precio">
+                    <p>$71.999</p>
+                </div>
+
+            </div>
+            <h2>Zapatillas Rivalry Low</h2>
             <h3>Hombre Originals</h3>
         </div>
 
