--- a/adidas.html
+++ b/adidas.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adidas</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <div id="subtitulos">
             <nav>
                 <ul class="inicio">
-                    <li><a href="#">Todo el Calzado</a></li>
+                    <li><a href="#">Ver Todo el Calzado</a></li>
                     <li><a href="#">Running</a></li>
                     <li><a href="#">Botines</a></li>
                     <li><a href="#">Originals</a></li>
@@ -29,7 +31,8 @@
         </div>
         <div>
             <ul class="inicio">
-                <li><a href="#">Filtrar y ordenar</a></li>
+                <li><a href="#" class="boton">Filtrar y ordenar <span
+                            class="material-symbols-outlined">page_info</span></a></li>
             </ul>
         </div>
     </header>
@@ -46,6 +49,9 @@
                 <div class="precio">
                     <p>$99.999</p>
                 </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
+                </div>
 
             </div>
             <h2>Zapatillas Ultraboost Light</h2>
@@ -60,6 +66,9 @@
                     alt="" class="img-hover">
                 <div class="precio">
                     <p>$63.699</p>
+                </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
                 </div>
 
             </div>
@@ -77,6 +86,9 @@
                 <div class="precio">
                     <p>$64.999</p>
                 </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
+                </div>
 
             </div>
             <h2>Zapatillas Forum Low</h2>
@@ -91,6 +103,9 @@
                     alt="" class="img-hover">
                 <div class="precio">
                     <p>$134.999</p>
+                </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
                 </div>
 
             </div>
@@ -107,6 +122,9 @@
                 <div class="precio">
                     <p>$26.299</p>
                 </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
+                </div>
 
             </div>
             <h2>Zapatillas 3MC</h2>
@@ -121,6 +139,9 @@
                     alt="" class="img-hover">
                 <div class="precio">
                     <p>$49.999</p>
+                </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
                 </div>
 
             </div>
@@ -137,6 +158,9 @@
                 <div class="precio">
                     <p>$44.499</p>
                 </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
+                </div>
 
             </div>
             <h2>Zapatillas Forum Mid</h2>
@@ -151,6 +175,9 @@
                     alt="" class="img-hover">
                 <div class="precio">
                     <p>$71.999</p>
+                </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
                 </div>
 
             </div>
@@ -167,6 +194,9 @@
                 <div class="precio">
                     <p>$64.999</p>
                 </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
+                </div>
 
             </div>
             <h2>Zapatillas Campus 00s</h2>
@@ -181,6 +211,9 @@
                     alt="" class="img-hover">
                 <div class="precio">
                     <p>$61.999</p>
+                </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
                 </div>
 
             </div>
@@ -197,6 +230,9 @@
                 <div class="precio">
                     <p>$85.999</p>
                 </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
+                </div>
 
             </div>
             <h2>Zapatillas Superstar Parley</h2>
@@ -212,6 +248,9 @@
                 <div class="precio">
                     <p>$71.999</p>
                 </div>
+                <div class="corazon">
+                    <span class="material-symbols-outlined">favorite</span>
+                </div>
 
             </div>
             <h2>Zapatillas Rivalry Low</h2>
@@ -219,7 +258,23 @@
         </div>
 
     </main>
-    <footer></footer>
+    <footer>
+        <ul id="redes">
+            <li>
+                <a href="" class="redes"><img src="https://cdn-icons-png.flaticon.com/128/3669/3669950.png"
+                        alt="tiktok"></a>
+            </li>
+            <li>
+                <a href="" class="redes"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111463.png"
+                        alt="instagram"></a>
+            </li>
+            <li>
+                <a href="" class="redes"><img src="https://cdn-icons-png.flaticon.com/128/145/145802.png"
+                        alt="facebook"></a>
+            </li>
+        </ul>
+        <p id="foot">Rocco Cupayolo - Comision A - Año: 2023</p>
+    </footer>
 </body>
 
 </html>
